# ros2_shortcut

./: AGENTS.md  README.md
docs/: concepts.md  foxglove_panels.md  how_to_run.md  networking.md
install/: local_setup.sh  setup.sh
install/ros2_shortcut_bringup/share/ros2_shortcut_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_shortcut_bringup/share/ros2_shortcut_bringup/config/: foxglove_bridge.yaml
install/ros2_shortcut_bringup/share/ros2_shortcut_bringup/launch/: foxglove_bridge.launch.py
install/ros2sc_web/lib/ros2sc_web/: ros2sc_web_server
install/ros2sc_web/share/ros2sc_web/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2sc_web/share/ros2sc_web/launch/: web_inspector.launch.py
install/ros2sc_web/share/ros2sc_web/static/: index.html
log/: latest_build
ros2_shortcut_bringup/: package.xml  setup.cfg  setup.py
ros2_shortcut_bringup/config/: foxglove_bridge.yaml
ros2_shortcut_bringup/launch/: foxglove_bridge.launch.py
ros2_shortcut_bringup/resource/: ros2_shortcut_bringup
ros2sc_web/: package.xml  setup.cfg  setup.py
ros2sc_web/launch/: web_inspector.launch.py
ros2sc_web/resource/: ros2sc_web
ros2sc_web/ros2sc_web/: server.py
ros2sc_web/ros2sc_web/static/: index.html
